# ehentai-dl

./: .gitignore  Cargo.toml  README.md
res/: galleries.txt  ~galleries.txt
src/: aniyomi.rs  cli.rs  config.rs  downloader.rs  extractor.rs  gallery.rs  logger.rs  macros.rs  main.rs  parser.rs  parsers.rs  progress.rs  sanitize.rs  tag.rs  version.rs  zip.rs
src/config/: entities.rs
