[package]
name = "ehentai-dl"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.23", default-features = false, features=["std", "clock"]}
fern_colored = "0.6.1"
indicatif = "0.17.3"
log = "0.4.17"
regex = "1.7.1"
# reqwest has a "stream" feature
reqwest = {version = "0.11.14", features = ["blocking"]}
scraper = "0.16.0"
tempfile = "3.3.0"

[profile.release]
lto = true
strip = true
opt-level = "s"
debug = false
panic = "abort"
codegen-units = 1
