[package]
name = "ehentai-dl"
version = "3.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
chrono = {version = "0.4.23", default-features = false, features=["std", "clock"]}
fern_colored = "0.6.1"
futures-util = "0.3.28"
indicatif = "0.17.3"
json_minimal = { version = "0.1.3", optional = true }
lazy_static = { version ="1.4.0", optional = true }
log = "0.4.17"
regex = "1.7.1"
reqwest = {version = "0.11.14", features = ["blocking", "stream"]}
scraper = "0.16.0"
serde = { version = "1.0.163", features = ["derive"], optional = true }
tempfile = "3.3.0"
tokio = { version = "1.27.0", features = ["full"] }
toml = { version = "0.7.4", optional = true }
zip = { version = "0.6.4", optional = true, default-features= false, features = ["bzip2"]}

[features]
default = []
aniyomi = ["dep:json_minimal", "dep:lazy_static"]
zip = ["dep:zip"]
config = ["dep:toml", "dep:serde", "dep:lazy_static"]

[profile.release]
lto = true
strip = true
opt-level = "z"
debug = false
panic = "abort"
codegen-units = 1
